--- a/assets/css/styler.css
+++ b/assets/css/styler.css
@@ -4,6 +4,85 @@ body {
   text-transform: uppercase;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 2rem;
+}
+
+footer.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 2rem;
+}
+
+main.main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.deadend-logo {
+  width: 50%;
+  max-width: 7.5rem;
+  height: auto;
+  display: block;
+}
+
+.deadend-collection {
+  width: 50%;
+  max-width: 7.5rem;
+  height: auto;
+  display: block;
+}
+
+.phongbat-loading {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+}
+
 .de-noise {
   position: fixed;
   top: 0;
@@ -69,7 +148,7 @@ body {
   display: block;
   cursor: pointer;
   text-align: center;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 #de-bgm {
