--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,100 @@ body {
   text-transform: uppercase;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-a:visited {
+header.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 2rem;
+}
+
+footer.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding: 2rem;
+}
+
+main.main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.deadend-logo {
+  width: 50%;
+  max-width: 7.5rem;
+  height: auto;
+  display: block;
+}
+
+.deadend-collection {
+  width: 80%;
+  max-width: 15rem;
+  height: auto;
+  display: block;
+}
+
+.phongbat-loading {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+}
+
+.phongbat-index {
+  display: block;
+  width: 100%;
+  max-width: 750px;
+}
+
+.phongbat-links {
+  margin-top: 2rem;
+}
+
+.phongbat-links a {
   color: inherit;
 }
 
@@ -17,7 +105,7 @@ a:visited {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10101;
+  z-index: 10000;
   display: block;
   width: 100%;
   height: 100%;
@@ -25,18 +113,11 @@ a:visited {
   background-image: url("../images/noise.gif");
   background-size: 300px auto;
   opacity: 0.05;
-}
-
-.is-click-through {
-  pointer-events: none;
-}
-
-.is-nonselectable {
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   -webkit-user-select: none;
-  -webkit-user-drag: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  pointer-events: none;
 }
 
 .de-wrapper {
@@ -59,8 +140,8 @@ a:visited {
 }
 
 .de-wrapper .de-img {
-  width: 90vw;
-  max-width: 25rem;
+  width: 80%;
+  max-width: 400px;
 }
 
 .de-note {
@@ -90,7 +171,7 @@ a:visited {
   display: block;
   cursor: pointer;
   text-align: center;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 #de-bgm {
@@ -106,6 +187,6 @@ a:visited {
 
 .de-link-img {
   display: block;
-  width: 200px;
+  height: 15vh;
 }
 /*# sourceMappingURL=style.css.map */
