--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,107 +1,164 @@
 body {
-    background-color: rgb(227, 223, 209);
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
+	background-color: rgb(227, 223, 209);
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
+* {
+	box-sizing: border-box;
 }
 
-a:visited {
-    color: inherit;
+header.header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	padding: 2rem;
+}
+
+footer.footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	padding: 2rem;
+}
+
+main.main {
+	position: fixed;
+	top: 0;
+	left: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	width: 100%;
+	height: 100%;
+
+	overflow: hidden;
+}
+
+.deadend-logo {
+	width: 50%;
+	max-width: 7.5rem;
+	height: auto;
+	display: block;
+}
+
+.deadend-collection {
+	width: 80%;
+	max-width: 15rem;
+	height: auto;
+	display: block;
+}
+
+.phongbat-loading {
+	display: block;
+	width: 100%;
+	max-width: 400px;
+}
+
+.phongbat-index {
+	display: block;
+	width: 100%;
+	max-width: 750px;
+}
+
+.phongbat-links {
+	margin-top: 2rem;
+	a {
+		color: inherit;
+	}
 }
 
 .de-noise {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10101;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10000;
 
-    display: block;
+	display: block;
 
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 
-    background-color: transparent;
-    background-image: url('../images/noise.gif');
-    background-size: 300px auto;
+	background-color: transparent;
+	background-image: url('../images/noise.gif');
+	background-size: 300px auto;
 
-    opacity: 0.05;
-}
+	opacity: 0.05;
 
-.is-click-through {
-    pointer-events: none;
-}
-
-.is-nonselectable {
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-user-select: none;
-    -webkit-user-drag: none;
+	user-select: none;
+	pointer-events: none;
 }
 
 .de-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 
-    overflow: hidden;
+	overflow: hidden;
 
-    color: rgb(227, 223, 209);
-    // color: #3f4a24;
+	color: rgb(227, 223, 209);
+	// color: #3f4a24;
 
-    .de-img {
-        width: 90vw;
-        max-width: 25rem;
-    }
+	.de-img {
+		width: 80%;
+		max-width: 400px;
+	}
 }
 
 .de-note {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 1.5rem;
-    z-index: 2;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	padding: 1.5rem;
+	z-index: 2;
 
-    color: #3f4a24;
+	color: #3f4a24;
 
-    .de-bgm-toggle {
-        display: block;
-        cursor: pointer;
-        text-align: center;
-        margin: .5rem 0;
-    }
-
+	.de-bgm-toggle {
+		display: block;
+		cursor: pointer;
+		text-align: center;
+		margin: 0.5rem 0;
+	}
 }
 
 #de-bgm {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99;
 }
 
 .de-girl {
-    width: 6rem;
+	width: 6rem;
 }
 
-
 .de-link-img {
-    display: block;
-    width: 200px;
+	display: block;
+	height: 15vh;
 }
