--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,19 @@
 body {
   background-color: #e3dfd1;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a {
+  color: currentColor;
+}
+
+svg {
+  fill: currentColor;
 }
 
 header.header {
@@ -14,15 +21,9 @@ header.header {
   top: 0;
   left: 0;
   right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 2rem;
 }
@@ -32,15 +33,9 @@ footer.footer {
   bottom: 0;
   left: 0;
   right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 2rem;
 }
@@ -49,19 +44,10 @@ main.main {
   position: fixed;
   top: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -96,7 +82,6 @@ main.main {
 .phongbat-links {
   margin-top: 2rem;
 }
-
 .phongbat-links a {
   color: inherit;
 }
@@ -124,21 +109,14 @@ main.main {
   position: fixed;
   top: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   overflow: hidden;
   color: #e3dfd1;
 }
-
 .de-wrapper .de-img {
   width: 80%;
   max-width: 400px;
@@ -148,25 +126,15 @@ main.main {
   position: fixed;
   bottom: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 1.5rem;
   z-index: 2;
   color: #3f4a24;
 }
-
 .de-note .de-bgm-toggle {
   display: block;
   cursor: pointer;
@@ -189,4 +157,7 @@ main.main {
   display: block;
   height: 15vh;
 }
-/*# sourceMappingURL=style.css.map */
+
+.ymh {
+  max-width: 400px;
+}/*# sourceMappingURL=style.css.map */
